tests/baselines/reference/FunctionPropertyAssignments3.errors.txt
tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments3.ts(1,12): error TS1003: Identifier expected.


==== tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments3.ts (1 errors) ====
    var v = { *{ } }
               ~
!!! error TS1003: Identifier expected.